--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,5 @@
 {
-    "backup_repo": "C:\\esxi_backups",
+    "backup_repo": false,
     "hosts": [
         {
             "address": "esxi-host-1.domain.tld",
